# whats-up-doc

./: LICENSE  README.md  pyproject.toml
src/seqmeta/: __init__.py  analysis.py  cli.py  constants.py  inference.py  io.py  samplesheet.py
src/whats_up_doc/: __init__.py  cli.py
tests/: test_analysis.py  test_cli.py  test_samplesheet.py  utils.py
